2018-08-23  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* type1.c: Add glyph names of component glyphs used by seac
	operator to CharSet string.
	* configure.ac: Version 20180823.

2018-08-21  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c: Fix for "infinite loop" detection. Now handles the
	case of circular reference properly.
	* pdfencrypt.c: Fixed bug that key size is not adjusted
	correctly.
	* configure.ac: Version 20180821.

2018-08-18  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype2.c: Workaround for CIDSet issue. All glyphs
	including component glyphs and dummy glyphs except .notdef
	should be listed in CIDSet.

2018-08-17  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cmap_write.c, tt_cmap.[ch], type0.c: Fixed a bug that
	CMapName in CMap resource is not properly written.
	Not correctly handles PostScript name and string objects.
	Use CMapName constructed from font's BaseFont entry.
	* spc_pdfm.c, spc_pdfm.h, specials.c: Added new special command
	pdf:pageresources similar to pdfTeX \pdfpageresources
	primitive.
	* pdfencrypt.c: Adobe extension for AES 256-bit encryption is
	not necessary for PDF version 2.0.

2018-05-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: First search for an input file with a suffix .xdv
	or .dvi. Report from Andreas Scherer:
	http://tug.org/pipermail/tex-k/2018-May/002882.html.

2018-05-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfparse.c: Revert. The changes on 2018-05-14 must be
	problematic. Again, kanji characters including 0x5c can't be
	used as names of image files in (e)-pTeX.

2018-05-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfparse.c: Allow image file names including 0x5c for
	(e)-pTeX in CP932-like system (Windows only).

2018-05-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tt_cmap.c: Revert a part of changes in 2017-12-09,
	which breaks to give tounicode entries for ligatures.
	http://tug.org/pipermail/tex-live/2018-May/041608.html.